[tool.poetry]
name = "foo"
version = "1.2.3"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.8"
aiocron = "~1.4"
aiodns = "*"
aioelasticsearch = "*"
aiohttp = "3.7.4"
aioredis = "~1.3.1"
antlr4-python3-runtime = "*"
apacheconfig = "^0.2.8"
apscheduler = "*"
asgiref = "~3.4.1"
azure-common = "^1.1.27"
azure-core = "^1.16.0"
azure-graphrbac = "==0.61.1"
azure-identity = "^1.6.0"
azure-keyvault = "^4.1.0"
azure-keyvault-secrets = "^4.3.0"
azure-mgmt-authorization = "^1.0.0"
azure-mgmt-batch = "^16.0.0"
azure-mgmt-compute = "^22.1.0"
azure-mgmt-core = "^1.3.0"
azure-mgmt-keyvault = "^9.0.0"
azure-mgmt-monitor = "^2.0.0"
azure-mgmt-network = "^19.0.0"
azure-mgmt-resource = "^19.0.0"
azure-mgmt-sql = "^3.0.1"
azure-mgmt-storage = "^18.0.0"
azure-mgmt-subscription = "^1.0.0"
azure-storage-blob = "~12.8.1"
azure-mgmt-containerinstance = "^8.0.0"
beautifulsoup4 = "*"
binaryornot = "*"
boto3 = "1.21.21"
cchardet = "*"
daphne = "~2.5.0"
channels = "~2.4.0"
crossplane = "^0.5.3"
cryptography = "^3.4.6"
cython = "*"
dataclasses-json = "==0.4.5"
deepmerge = "*"
dj-database-url = "*"
django = "~3.2.6"
django-axes = "5.22.0"
django-cors-headers = "*"
django-debug-toolbar = "*"
django-filter = "*"
django-import-export = "*"
django-js-reverse = "*"
django-log-request-id = "*"
django-model-utils = "*"
django-rest-slack = "*"
django-stubs = "^1.6.0"
django-webpack-loader = "*"
djangorestframework = "*"
djangorestframework-simplejwt = "~4.8.0"
djangorestframework-stubs = "^1.2.0"
drf-yasg = "^1.20.0"
elasticsearch = "~7.9.1"
fastavro = "*"
flake8 = "*"
flask = "*"
furl = "*"
google-api-core = "^1.22.2"
google-api-python-client = "==2.33.0"
greenery = "*"
haikunator = "==2.1.0"
ijson = "==3.1.2"
impacket = "*"
inflection = "*"
itsdangerous = "==2.0.1"
kafka-python = "*"
libarchive = "*"
msrestazure = "*"
multidict = "^4.6.1"
netaddr = "==0.8.0"
parliament = "~1.4.1"
pefile = "*"
psutil = "*"
psycopg2-binary = "~2.9.0"
pycryptodome = "*"
pydash = "*"
pyelftools = "*"
pyhaproxy = "*"
pyjq = "*"
pysaml2 = "*"
pytest-asyncio = "^0.12.0"
pytest-xdist = "^1.34.0"
python-decouple = "*"
python-evtx = "0.6.1"
python-magic = "==0.4.18"
python-registry = "*"
pytz = "==2021.3"
pyyaml = "*"
pyre2 = ">=0.3.1"
requests = ">=2.24.0"
requests-aws4auth = "*"
requests-oauthlib = "*"
retrying = "*"
schema = "*"
slack-progress = "*"
slackclient = "==2.9.1"
social-auth-app-django = "*"
social-auth-core = "==3.3.3"
sshpubkeys = "*"
swagger-spec-validator = "*"
textract = "*"
tldextract = "*"
typing-extensions = "==3.10.0.2"
utmp = "*"
validators = "*"
wrapt = "*"
yara-python = "*"
google-cloud-monitoring = "2.1.0"
gremlinpython = "3.5.1"
azure-storage-queue = "^12.1.6"
azure-mgmt-security = "^1.0.0"
azure-mgmt-web = "^3.0.0"
azure-keyvault-keys = "*"
azure-mgmt-hybridkubernetes = "*"
azure-mgmt-containerservice = "^16.0.0"
sentry-sdk = "^1.5.1"
azure-mgmt-containerregistry = "^8.1.0"
kubernetes = "^12.0.1"
art = "^5.1"
django-postgres-extra = "^2.0.2"
azure-mgmt-rdbms = "^8.0.0"
defusedxml = "==0.7.0rc1"
confluent-kafka = "1.5.0"
launchdarkly-server-sdk = "^7.2.0"
grpcio = "^1.37.0"
PyJWT = "==2.1.0"
pandas = "~1.3.4"
aiopg = "^1.2.1"
nest-asyncio = "^1.5.1"
backoff = "^1.10.0"
SQLAlchemy = "^1.4.3"
prometheus-client = "^0.12.0"
django-pg-bulk-update = "==3.4.2"
azure-mgmt-cosmosdb = "^6.2.0"
google-auth-oauthlib = "^0.4.4"
zenpy = "^2.0.24"
azure-mgmt-apimanagement = "^2.0.0"
croniter = "1.0.8"
semgrep = "^0.51.0"
requests-mock = "^1.9.2"
azure-mgmt-frontdoor = "^1.0.0"
pytest-django = "4.2.0"
typeguard = "^2.12.0"
faust-streaming = "0.8.2"
aiobotocore = "^2.0.0"
freezegun = "^1.1.0"
texttable = "^1.6.3"
marshmallow-dataclass = "^8.4.1"
azure-mgmt-automation = "^1.0.0"
aliyun-python-sdk-core = "^2.13.35"
aliyun-python-sdk-ecs = "^4.24.3"
aliyun-python-sdk-sts = "^3.0.2"
aliyun-python-sdk-ram = "^3.2.0"
aliyun-python-sdk-rds = "^2.5.11"
aliyun-python-sdk-kms = "^2.15.0"
aliyun-python-sdk-actiontrail = "^2.0.4"
oss2 = "^2.14.0"
oci = "^2.41.1"
azure-mgmt-servicefabric = "^1.0.0"
pyminizip = "^0.2.4"
azure-mgmt-logic = "^9.0.0"
azure-mgmt-managementgroups = "^1.0.0"
token-bucket = "^0.3.0"
azure-mgmt-msi = "^1.0.0"
ipinfo = "^4.2.1"
scipy = "^1.7.3"
snowflake-connector-python = "^2.5.1"
snowflake-sqlalchemy = "^1.3.1"
pytest-split = "^0.3.3"
graphene-django = "^2.15.0"
aliyun-python-sdk-resourcemanager = "^1.0.0"
pydantic = "^1.8.2"
aiocache = "^0.11.1"
dj-inmemorystorage = "^2.1.0"
gunicorn = "^20.1.0"
guppy3 = "^3.1.2"
jsonschema = "3.2.0"
setuptools = "^59.6.0"
pytest-order = "^1.0.0"
scim2-filter-parser = "^0.3.9"
botocore = "^1.24.21"
httpx = "^0.21.1"
django-redis = "^5.0.0"
python-snappy = "^0.6.0"
stringcase = "^1.2.0"
vt-py = "0.9.0"
fastapi = "^0.70.1"
drf-spectacular = "^0.21.0"
openapi-typed = "^0.1.0"
djangorestframework-dataclasses = "^1.0.0"
tinydb = "^4.5.2"
alembic = "^1.7.5"
uvicorn = { extras = ["standard"], version = "^0.16.0" }
factory-boy = "^3.2.1"
django-multitenant = "^3.0.0"
aiomonitor = "^0.4.5"
django-prometheus = "^2.2.0"
cron-descriptor = "^1.2.24"
celery = { version = "^5.2.2", extras = ["redis", "gevent"] }
django-celery-beat = "^2.2.1"
django-celery-results = "^2.2.0"
flower = "^1.0.0"
pyeda = "^0.28.0"
ujson = "^5.1.0"
msgpack = "^1.0.3"
structlog = "*"
uWSGI = "^2.0.20"
django-ses = "^2.6.0"
more_itertools = "8.12.0"
aliyun-python-sdk-cs = "^4.8.1"
docker = "*"
flask_cors = "*"

[tool.poetry.dev-dependencies]
yappi = "*"
black = "==22.1.0"
dash = "^1.19.0"
dash-cytoscape = "^0.2.0"
ipython = "*"
memory-profiler = "*"
mock = "==4.0.2"
moto = "2.2.19"
mypy = "==0.782"
pylint = "*"
pytest = "==6.1.2"
pytest-cov = "*"
pytest-django = "*"
responses = "*"
scikit-build = "*"
xlrd = "==1.2.0"
pytest-timeout = "^1.4.2"
pytest-mock = "^3.6.1"
